// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlexRow FlexRow component should render 1`] = `
<div
  className="artifak__sc-6om8fa-0 iIcfGN"
>
  Test
</div>
`;

exports[`FlexRow FlexRow component should render row-reverse 1`] = `
<div
  className="artifak__sc-6om8fa-0 kbMLcc"
>
  Test
</div>
`;
